# todoapp-poetry

./: .env.example  .gitignore  pyproject.toml
tests/: test_main.py
todo/: main.py  settings.py
