[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["ahmadbilal2023 <ahmadbilal20152016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
uvicorn = "^0.28.0"
psycopg = "^3.1.18"
pytest = "^8.1.1"
httpx = "^0.27.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
